# marax-shot-timer

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs
