[package]
name = "marax-shot-timer"
version = "0.1.0"
authors = ["Ismo Puustinen <ismo.puustinen@gmail.com>"]
edition = "2021"

[dependencies]
embedded-graphics = "0.6.2"
linux-embedded-hal = "0.3.0"
ssd1306 = "0.4.0"
ctrlc = { version = "3.0", features = ["termination"] }
tokio = {version = "1.24.1", features = ["full"] }
prometheus-hyper = "0.1.5"
prometheus = "0.13.3"
