[package]
name = "marax-shot-timer"
version = "0.1.0"
authors = ["Ismo Puustinen <ismo.puustinen@gmail.com>"]
edition = "2018"

[dependencies]
embedded-graphics = "0.6"
linux-embedded-hal = "0.3"
ssd1306 = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1.24", features = ["full"] }
prometheus-hyper = "0.1"
prometheus = "0.13"
tokio-serial = "5.4"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.3"
futures = "0.3"
